# SteRoEngine

./: CMakeLists.txt  camera.h  config.h  direction.h  foursided.h  level.h  main.cpp  raycast.cpp  raycast.h  renderer.cpp  renderer.h  tile.h  tilemap.h
data/shaders/: raycasting.frag
src/: main.cpp
